2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec (BuildRequires): Depend on kernel-headers,
	glibc-headers, byacc, flex, and zlib-devel, to allow successful
	building on bare systems.

	(%files): Manpage filenames must be gzipped.
	(%install): Pass VERSION at install-time too.  Don't install the
	binary twice.

2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* README: New.
	* cmd/dtrace.1: Likewise, from OpenSolaris 2009.6.
	* INCOMPATIBILITIES: Be less emphatic: we don't know how to solve
	some of these problems yet.

	* GNUmakefile (VERSION): New.
	(DOCDIR): New, uses VERSION.
	(MANDIR): New.
	(all): Include a local Build as well.
	* dtrace.spec: Pass in VERSION. Mention new files.
	* Build: New, install README and INCOMPATIBILITIES.
	* cmd/Build (install): Install cmd/dtrace.1 too.

	* Makefunctions: Fix comment typo.

2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES (Likelihood):
	* Makefunctions (cc-dependencies):

2011-10-02  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile: Ensure $(BITNESS) is defined before (INVARIANT_CFLAGS).

2011-10-01  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec (%changelog): Sort correctly.

2011-09-30  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Build (libproc_SOURCES): Dropped dt_proc.c.
	* libproc/dt_proc.c: Deleted.
	(ps_getpid): Renamed to Pgetpid() and moved to...
	* libproc/Pcontrol.c (Pgetpid): ... here.
	* libproc/libproc.h: Renamed ps_getpid() to Pgetpid().
	* libproc/mapfile-vers: Dropped a lot of nonexistent functions.

	* libdtrace/dt_pid.c: Renamed calls.
	* libdtrace/dt_proc.c: Likewise.

	* libdtrace/i386/dt_isadep.c: Likewise.

2011-09-29  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c (g_oflags): Force to the equivalent of -64.
	* runtest.sh: Fix bug causing runtest.sum and runtest.log to be
	incomplete in --quiet mode.

2011-09-28  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec: Fix package name to dtrace-utils.
